mesh-ex1/mesh-ex-gw.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: mesh-ex-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: mesh-ex-vs
spec:
  hosts:
  - "*"
  gateways:
  - mesh-ex-gateway
  http:
  - match:
    - uri:
        exact: /
    route:
    - destination:
        host: mesh-ex1
        port:
          number: 80
